[gd_scene load_steps=4 format=3 uid="uid://dh5mgvc4y04ql"]

[ext_resource type="Script" uid="uid://dot20x8gjogkc" path="res://Components/Shell/shell.gd" id="1_f5510"]

[sub_resource type="PrismMesh" id="PrismMesh_h46kv"]
size = Vector3(0.2, 0.6, 0.2)

[sub_resource type="BoxShape3D" id="BoxShape3D_okp7v"]
size = Vector3(0.5, 0.5, 0.5)

[node name="Shell" type="Node3D"]
script = ExtResource("1_f5510")

[node name="TempMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0.1)
layers = 2
mesh = SubResource("PrismMesh_h46kv")

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0201612)
target_position = Vector3(0, 0, -2)
collision_mask = 3
collide_with_areas = true

[node name="ShapeCast3D" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.1)
shape = SubResource("BoxShape3D_okp7v")
target_position = Vector3(0, 0, -2)
collision_mask = 7

[node name="FuseTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="FuseTimer" to="." method="_on_fuse_timer_timeout"]
